feat: Adicionando Rotas de Areas de Conhecimento e Linguagens de Programação
