# backend/src/resources/areaConhecimento/areaConhecimento.type.ts
@@ -1,0 +1,9 @@
+import { AreaConhecimento } from "@prisma/client";
+
+export type CreateAreaConhecimentoDto = Pick<AreaConhecimento, "nome" > & {
+    versao?: string;
+};
+
+export type UpdateAreaConhecimentoDto = Pick<AreaConhecimento, "nome" > & {
+    versao?: string;
+};
