# backend/src/resources/linguagemProgramacao/linguagemProgramacao.type.ts
@@ -1,0 +1,9 @@
+import { LinguagemProgramacao } from "@prisma/client";
+
+export type CreateLinguagemProgramacaoDto = Pick<LinguagemProgramacao, "nome" > & {
+    versao?: string;
+};
+
+export type UpdateLinguagemProgramacaoDto = Pick<LinguagemProgramacao, "nome" > & {
+    versao?: string;
+};
